--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
 
                 <li>
-                    Escola SENAI "Mario Henriue Simonsen" - 
+                    Escola SENAI "Mario Henrique Simonsen" - 
                     Técnico em Administração
                 </li>
 
