--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <h2>Sobre Mim</h2>
                 
                 <p>
-                    Atualmente trabalho na Caterpillar, sou estudante do curso de Ánalise e Desenvolvimento de Sistemas e no tempo livre faço os meus hobbies favoritos, como leitura, corrida e basquete.
+                    Atualmente trabalho na Caterpillar, sou estudante do curso de Análise e Desenvolvimento de Sistemas e no tempo livre faço os meus hobbies favoritos, como leitura, corrida e basquete.
                 </p>
 
                 <p>
-                    Profissionalmente eu tenho três anos com experiência com o cliente, fiz voluntáriado para conversações em inglês e no futuro desejo me tornar Engenheiro de Software!
+                    Profissionalmente eu tenho três anos de experiência com o cliente, fiz voluntariado para conversações em inglês e no futuro desejo me tornar Engenheiro de Software!
                 </p>
                 
         </section>
@@ -82,7 +82,7 @@
                 <li>
                     Poupatempo De Piracicaba.
                     <br>
-                    Cargo: Estágiario
+                    Cargo: Estagiário
                 </li>
             </ul>
         </section>
@@ -103,7 +103,7 @@
                     Domínio Pacote Office (Word, Excel);
                 </li>
                 <li>
-                    Níver Básico em Programação em HTML, CSS e JavaScript;
+                    Nível Básico em Programação em HTML, CSS e JavaScript;
                 </li>
                 <li>
                     Língua Inglesa - Nível Intermediário.
